@@ -197,6 +197,11 @@ It is always available.
   or when \code{os._exit()} is called.}
 \end{datadesc}
 
+\begin{funcdesc}{getcheckinterval}{}
+  Return the interpreter's ``check interval'';
+  see \function{setcheckinterval()}.
+\end{funcdesc}
+
 \begin{funcdesc}{getdefaultencoding}{}
   Return the name of the current default string encoding used by the
   Unicode implementation.
